--- a/style.css
+++ b/style.css
@@ -108,3 +108,71 @@ svg, #current-high {
     background-image: url('night.png');
     color: white;
 }
+
+/* Toggle switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 26px;
+    text-align: center;
+
+}
+  
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    font-size: 12px;
+    content: 'F';
+    align-content: center;
+    height: 18px;
+    width: fit-content;
+    padding: 0px 4px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(36px);
+    -ms-transform: translateX(36px);
+    transform: translateX(38px);
+    content: "C";
+    padding: 0px 4px;
+    width: fit-content;
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
+}
