--- a/style.css
+++ b/style.css
@@ -1,189 +1,194 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-color: #97cbe8;
+  background-color: #97cbe8;
 }
 
 form {
-    text-align: center;
-    margin: 2em 0; 
+  text-align: center;
+  margin: 2em 0;
 }
 
-form input, button {
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    padding: 0.2em;
+form input,
+button {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 0.2em;
 }
 
 button:hover {
-    background-color: #2196F3;
-    color: white;
+  background-color: #2196f3;
+  color: white;
 }
 
-svg, #current-high {
-    padding-right: 1ch;
+svg,
+#current-high {
+  padding-right: 1ch;
 }
 
 .main {
-    background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .large-text {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 .container {
-    border: 1px solid lightgray;
-    border-radius: 10px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
   padding: 1em;
 }
 
 .flex {
-    display: flex;
-    flex-grow: 1;
-    align-items: center;
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
 }
 
 .center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .apart {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .main {
-    max-width: 80%;
-    margin: 0px auto;
-    display: grid;
-    grid-template-rows: 3fr 3fr 2fr 1fr;
-    padding: 1em;
-    color: black;
+  max-width: 80%;
+  margin: 0px auto;
+  display: grid;
+  grid-template-rows: 3fr 3fr 2fr 1fr;
+  padding: 1em;
+  color: black;
 }
 
 .overview {
-    text-align: center;
-    padding-top: 2em;
+  text-align: center;
+  padding-top: 2em;
 }
 
 .forecast-display {
-    display: grid;
-    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+  display: grid;
+  grid-template-rows: 1fr 2fr 2fr 2fr;
 }
 
 .forecast {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    align-items: center;
-    border-top: 1px solid lightgray;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  align-items: center;
+  border-top: 1px solid lightgray;
+}
+
+.icon {
+  text-align: center;
 }
 
 .display-feel {
-    width: 45%; 
-    height: 70%;
+  width: 45%;
+  height: 70%;
 }
 
 .sunny {
-    background-image: url('./background-images/sunny.png');
+  background-image: url("./background-images/sunny.png");
 }
 
 .cloudy {
-    background-image: url('./background-images/cloudy\ \(1\).png');
+  background-image: url("./background-images/cloudy\ \(1\).png");
 }
 
 .partly-cloudy {
-    background-image: url('./background-images/partly-cloudy.png');
+  background-image: url("./background-images/partly-cloudy.png");
 }
 
 .rain {
-    background-image: url('./background-images/rain.png');
+  background-image: url("./background-images/rain.png");
 }
 
 .storm {
-    background-image: url('./background-images/storm.png');
+  background-image: url("./background-images/storm.png");
 }
 
 .snow {
-    background-image: url('./background-images/snow.png');
+  background-image: url("./background-images/snow.png");
 }
 
 .wind {
-    background-image: url('./background-images/wind.png');
+  background-image: url("./background-images/wind.png");
 }
 
 .night {
-    background-image: url('./background-images/night.png');
-    color: white;
+  background-image: url("./background-images/night.png");
+  color: white;
 }
 
 /* Toggle switch */
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 64px;
-    height: 26px;
-    text-align: center;
-
+  position: relative;
+  display: inline-block;
+  width: 64px;
+  height: 26px;
+  text-align: center;
 }
-  
+
 .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
-    position: absolute;
-    font-size: 12px;
-    content: 'F';
-    align-content: center;
-    height: 18px;
-    width: fit-content;
-    padding: 0px 4px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+  position: absolute;
+  font-size: 12px;
+  content: "F";
+  align-content: center;
+  height: 18px;
+  width: fit-content;
+  padding: 0px 4px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
-    background-color: #2196F3;
+  background-color: #2196f3;
 }
-  
+
 input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196f3;
 }
-  
+
 input:checked + .slider:before {
-    -webkit-transform: translateX(36px);
-    -ms-transform: translateX(36px);
-    transform: translateX(38px);
-    content: "C";
-    padding: 0px 4px;
-    width: fit-content;
+  -webkit-transform: translateX(36px);
+  -ms-transform: translateX(36px);
+  transform: translateX(38px);
+  content: "C";
+  padding: 0px 4px;
+  width: fit-content;
 }
 
 .slider.round {
-    border-radius: 34px;
+  border-radius: 34px;
 }
-  
+
 .slider.round:before {
-    border-radius: 50%;
+  border-radius: 50%;
 }
